--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buy vs. Rent Financial Calculator</title>
+    <title>Buy vs. Rent Calculator</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet">
 </head>
 <body>
     <div class="page-wrapper">
         <div class="container">
-            <h1 class="mb-4">Buy vs. Rent Financial Calculator</h1>
+            <h1 class="mb-4">Buy vs. Rent Calculator</h1>
             
             <!-- Convert to accordion -->
             <div class="accordion mb-4" id="explainerAccordion">
