--- a/templates/index.html
+++ b/templates/index.html
@@ -123,7 +123,7 @@
                                         </div>
                                         <div class="form-group">
                                             <label for="investment_return">Investment Return Rate (%)</label>
-                                            <small class="form-text text-muted d-block mb-2">Your expected yearly return on your investments. Should be bank interest rate if not planning to invest. Average for US stock market over last 30 years is 9%.</small>
+                                            <small class="form-t -ext text-muted d-block mb-2">Your expected yearly return on your investments. Should be bank interest rate if not planning to invest. Average for US stock market over last 30 years is 9%.</small>
                                             <input type="number" class="form-control" id="investment_return" value="{{ config.DEFAULT_INVESTMENT_RETURN * 100 }}" step="0.1">
                                         </div>
                                         <div class="form-group">
